Fixed invisible project names in dropdown

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -119,6 +119,11 @@ only screen and (min-resolution: 192dpi) {
   cursor: pointer;
 }
 
+#toggl-button-edit-form #toggl-button-project-placeholder {
+  position: relative;
+  z-index: 2;
+}
+
 #toggl-button-edit-form #toggl-button-project-placeholder span,
 #toggl-button-edit-form #toggl-button-tag-placeholder span {
   float: right;
@@ -130,6 +135,12 @@ only screen and (min-resolution: 192dpi) {
 #toggl-button-edit-form #toggl-button-tag {
   visibility: hidden;
   position: absolute;
+}
+
+#toggl-button-edit-form #toggl-button-project {
+  visibility: visible!important;
+  z-index: 1;
+  max-width: 220px;
 }
 
 #toggl-button-description, #toggl-button-project, #toggl-button-tag {
